--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ],
+    "homepage": [
+      "https://jasonleewilson.github.io/test-page/"
     ]
   }
 }
