--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +32,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jasonleewilson.github.io/test-page/"
+  "homepage": "https://jasonleewilson.github.io/test-page/",
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }
 }
